- Removed files related to previous java auto completion algorithm

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="diagnostic_position">Start: %s, %s    End: %s, %s</string>
     <string name="diagnostic_error">ERROR</string>
     <string name="diagnostic_warning">WARNING</string>
-    <string name="diagnostic_hint">INFO</string>
-    <string name="diagnostic_info">HINT</string>
+    <string name="diagnostic_hint">HINT</string>
+    <string name="diagnostic_info">INFO</string>
 	<string name="msg_project_deleted">Project deleted</string>
 	<string name="msg_project_delete_failed">Failed to delete project!</string>
 	<string name="msg_failed_load_icon_path">Failed to load icon path!</string>
@@ -17,8 +17,8 @@
 	<string name="msg_indexing">Indexing: %s</string>
 	<string name="msg_daemons_force_stopping">Gradle build process is running. Killing daemons...</string>
 	<string name="msg_daemons_stopped">Gradle Daemons Stopped</string>
-    <string name="recreate_completion_services">Recreate Completion Services</string>
-    <string name="gradle_daemon_status">Gradle Daemon Status</string>
+    <string name="recreate_completion_services">Recreate services</string>
+    <string name="gradle_daemon_status">Gradle daemon status</string>
 	<string name="msg_newfile_dest">Destination: %s/</string>
 	<string name="restype_drawable">Drawable</string>
 	<string name="restype_layout">Layout</string>
@@ -56,22 +56,22 @@
 	<string name="msg_clear_cache">This will delete caches directory created by Gradle. If you delete it, the next build may take a bit longer than normal as Gradle will download required files again.\n\nAre you sure you want to delete caches?</string>
 	<string name="msg_install_gradle">Currently installed gradle version will be DELETE PEEMANENTLY!\n\nPlease enter full path of the zip file which contains Gradle distribution.</string>
 	<string name="reset">Reset</string>
-	<string name="title_change_text_size">Editor Font Size</string>
+	<string name="title_change_text_size">Editor font size</string>
 	<string name="idepref_build_clearCache_title">Clear Gradle caches</string>
 	<string name="idepref_build_clearCache_summary">Clear Gradle caches directory. This will delete all dependencies downloaded by Gradle. Required files will be downloaded again in next build.</string>
-	<string name="idepref_build_choosegradle_title">Choose Gradle Version</string>
+	<string name="idepref_build_choosegradle_title">Choose Gradle version</string>
     <string name="idepref_build_choosegradle_summary">Choose one of the installed Gradle versions.</string>
     <string name="idepref_build_installgradle_title">Custom Gradle</string>
     <string name="idepref_build_installgradle_summary">Define custom Gradle that will be used in AndroidIDE.</string>
-    <string name="idepref_build_customgradlecommands_title">Additional Gradle Commands</string>
+    <string name="idepref_build_customgradlecommands_title">Additional Gradle commands</string>
     <string name="idepref_build_customgradlecommands_summary">Choose additional commands that will be added while executing every task</string>
-    <string name="idepref_build_editgradleproperties_title">Edit global Gradle Properties</string>
+    <string name="idepref_build_editgradleproperties_title">Edit global Gradle properties</string>
     <string name="idepref_build_editgradleproperties_summary">Edit gradle.properties in GRADLE_HOME</string>
-    <string name="idepref_editor_fontsize_title">Font Size</string>
+    <string name="idepref_editor_fontsize_title">Font size</string>
     <string name="idepref_editor_fontsize_summary">Font size of the editor</string>
     <string name="idepref_editor_paintingflags_title">Non-printable painting flags</string>
     <string name="idepref_editor_paintingflags_summary">Choose what non-printable characters should be drawn by the editor</string>
-    <string name="idepref_editor_drawhexcolors_title">Draw Hex Color Strings</string>
+    <string name="idepref_editor_drawhexcolors_title">Draw hex color strings</string>
     <string name="idepref_editor_drawhexcolors_summary">Should the editor draw hex color string?</string>
     <string name="idepref_appearance_summary">Customize look and feel of AndroidIDE</string>
     <string name="idepref_appearance_title">Appearance</string>
@@ -84,14 +84,14 @@
 	<string name="msg_first_build">This is the first time build after you installed AndroidIDE. First build usually takes time as Gradle downloads all dependencies and plugins. This process may take about 10&#8211;15 minutes. But this totally depends on your network connection.\n\nPlease be patient &#8230;</string>
 	<string name="msg_share_app">AndroidIDE is an Integrated Development Environment for building Android apps on your Android Smartphone. It supports :\n1. Gradle \n2. OpenJDK 11.0.1.\n3. Advanced Java auto completion\n4. XML Auto Completion \n5. Kotlin Support and much more.\n\nDownload AndroidIDE at https://androidide.com</string>
 	<string name="msg_need_help">If you\'re facing issues while using AndroidIDE or with building Android Apps, you can join the Telegram Group ask for help there.\n\nYou can also send suggesstions on our email.</string>
-    <string name="discuss_amp_help">Discuss &amp; Help</string>
-    <string name="user_suggestions">Issue Tracker</string>
+    <string name="discuss_amp_help">Discuss &amp; help</string>
+    <string name="user_suggestions">Issue tracker</string>
 	<string name="issue_tracker_summary">See what issues, suggesstions, requests we are currently working on.</string>
     <string name="need_help">Need Help?</string>
     <string name="other">Other</string>
     <string name="share_with_friends">Share with Friends</string>
-    <string name="ide_preferences">IDE Preferences</string>
-    <string name="discussions_on_telegram">Discussions On Telegram</string>
+    <string name="ide_preferences">IDE preferences</string>
+    <string name="discussions_on_telegram">Discussions on Telegram</string>
 	<string name="discussions_on_telegram_summary">Discuss issues, suggesstions, requests on Telegram</string>
 	<string name="project_exists">A project with same name already exists!</string>
 	<string name="copying_files">Copying files</string>
@@ -104,7 +104,7 @@
 	<string name="project_created_successfully">Project created successfully!</string>
 	<string name="msg_begin_project_write">Starting writing process</string>
 	<string name="msg_first_prepare_failed">Something went wrong while preparing for first build. Would you like to retry?</string>
-	<string name="title_restart">Please Restart</string>
+	<string name="title_restart">Please restart</string>
 	<string name="msg_restart">Installation is finished successfully. Please restart AndroidIDE.</string>
 	<string name="installed">Installed</string>
 	<string name="installing">Installing &#8230;</string>
@@ -129,14 +129,14 @@
 	<string name="msg_can_contain_slashes">You can use forward slashes (\'/\') to define a relative path to this folder. This will create directories if they do not already exist and will save time in creating multiple directories.</string>
 	<string name="folder_name">Folder Name</string>
 	<string name="file_name">File Name</string>
-	<string name="new_name">New Name</string>
-	<string name="new_file">New File</string>
-	<string name="new_java_class">New Java Class</string>
-	<string name="new_xml_resource">New XML Resource</string>
-	<string name="new_resource">New %s Resource</string>
-	<string name="new_folder">New Folder</string>
+	<string name="new_name">New name</string>
+	<string name="new_file">New file</string>
+	<string name="new_java_class">New Java class</string>
+	<string name="new_xml_resource">New XML resource</string>
+	<string name="new_resource">New %s resource</string>
+	<string name="new_folder">New folder</string>
     <string name="logs">Logs</string>
-	<string name="title_confirm_delete">Confirm Delete</string>
+	<string name="title_confirm_delete">Confirm delete</string>
 	<string name="msg_confirm_delete">Are you sure you want to delete:\n%s?</string>
 	<string name="copied">Copied successfully!</string>
 	<string name="msg_rename_file">Enter new name for file/folder.</string>
@@ -144,17 +144,17 @@
 	<string name="rename_failed">Unable to rename file!</string>
 	<string name="deleted">Deleted successfully!</string>
 	<string name="delete_failed">Unable to delete file!</string>
-	<string name="copy_path">Copy Path</string>
+	<string name="copy_path">Copy path</string>
 	<string name="rename_file">Rename</string>
 	<string name="delete_file">Delete</string>
-	<string name="file_info">File Info</string>
-	<string name="file_options">File Options</string>
-	<string name="action_closeAll">Close All</string>
-	<string name="action_closeOthers">Close Others</string>
-	<string name="action_closeThis">Close This</string>
+	<string name="file_info">File info</string>
+	<string name="file_options">File options</string>
+	<string name="action_closeAll">Close all</string>
+	<string name="action_closeOthers">Close others</string>
+	<string name="action_closeThis">Close this</string>
 	<string name="all_saved">All files saved!</string>
 	<string name="auto_saved">Automatically saved all files</string>
-	<string name="build_failed">Build Failed</string>
+	<string name="build_failed">Build failed</string>
 	<string name="compiling">Compiling</string>
 	<string name="install_failed">Failed to install apk. Please try again!</string>
 	<string name="invalid_app_name">Invalid app name</string>
@@ -163,14 +163,14 @@
 	<string name="invalid_target_sdk">Invalid target SDK</string>
 	<string name="invalid_values">Invalid values</string>
 	<string name="label_not_imported">[IMPORT] [%s]</string>
-	<string name="label_splash_image">Splash Image</string>
+	<string name="label_splash_image">Splash image</string>
 	<string name="msg_checking_storage_permissions">Checking storage permissions</string>
 	<string name="msg_failed_list_files">Failed to list project files!</string>
 	<string name="msg_failed_save">Failed to save some files!</string>
 	<string name="msg_service_started">Service Started</string>
-	<string name="msg_starting_completion">Starting Completion Services</string>
+	<string name="msg_starting_completion">Starting services</string>
 	<string name="msg_starting_completion_failed">Failed to start Completion Services</string>
-	<string name="msg_starting_daemon">Starting a Gradle Daemon</string>
+	<string name="msg_starting_daemon">Starting a Gradle daemon</string>
 	<string name="msg_storage_denied">Can\'t proceed without storage permissions</string>
 	<string name="msg_storage_granted">Storage permissions granted!</string>
 	<string name="msg_sync_needed">Gradle files have changed. Please rebuild your project to sync dependencies and configurations.</string>
@@ -181,41 +181,41 @@
 	<string name="saved_file">%s saved!</string>
 	<string name="task_merge_dex">Merge Dex</string>
 	<string name="template_basic">Basic Project</string>
-	<string name="template_basic_kotlin">Basic Kotlin Project</string>
-	<string name="template_bottom_navigation">Bottom Navigation Project</string>
+	<string name="template_basic_kotlin">Basic Kotlin project</string>
+	<string name="template_bottom_navigation">Bottom navigation project</string>
 	<string name="template_description_basic">A basic project with AppCompat Toolbar and a Floating Action Button</string>
 	<string name="template_description_bottom_navigation">Project with a BottomNavigationView and without any Toolbar</string>
 	<string name="template_description_empty">An empty project with default toolbar. Suitable when you want to do all the basic things yourself.</string>
 	<string name="template_description_kotlin">Basic project written in kotlin</string>
 	<string name="template_description_navigation_drawer">Project with AppCompat Toolbar, DrawerLayout and NavigationView</string>
-	<string name="template_empty">Empty Project</string>
-	<string name="template_navigation_drawer">Navigation Drawer Project</string>
-	<string name="unknown_type">Unknown Type</string>
+	<string name="template_empty">Empty project</string>
+	<string name="template_navigation_drawer">Navigation drawer project</string>
+	<string name="unknown_type">Unknown type</string>
     <string name="app_name">Android IDE</string>
     <string name="build">Build</string>
-    <string name="build_debug">Assemble Debug</string>
-    <string name="build_output">Build Output</string>
-    <string name="build_release">Assemble Release</string>
-    <string name="build_successful">Build Successful</string>
-    <string name="build_tasks">Build Tasks</string>
+    <string name="build_debug">assembleDebug</string>
+    <string name="build_output">Build output</string>
+    <string name="build_release">assembleRelease</string>
+    <string name="build_successful">Build successful</string>
+    <string name="build_tasks">Build tasks</string>
     <string name="cancel">Cancel</string>
-    <string name="clean_amp_build">Clean Build</string>
+    <string name="clean_amp_build">Clean &amp; build</string>
     <string name="clean_project">Clean</string>
     <string name="create_aab">Create AAB</string>
-    <string name="create_project">Create Project</string>
+    <string name="create_project">Create project</string>
     <string name="do_you_want_to_install_apk">Do you want to install APK?</string>
-    <string name="get_started">Get Started</string>
+    <string name="get_started">Get started</string>
     <string name="install">Install</string>
     <string name="lint">Lint</string>
-    <string name="lint_debug">Lint Debug</string>
-    <string name="lint_release">Lint Release</string>
-    <string name="lint_tasks">Lint Tasks</string>
+    <string name="lint_debug">lintDebug</string>
+    <string name="lint_release">lintRelease</string>
+    <string name="lint_tasks">Lint tasks</string>
     <string name="looks_like_you_havent_created">Looks like you haven\'t created any projects yet.</string>
     <string name="minimum_sdk">Minimum SDK</string>
     <string name="new_project">New project</string>
-    <string name="package_name">Package Name</string>
-    <string name="project_app_name">App Name</string>
-    <string name="quick_run_debug">Quick Run</string>
+    <string name="package_name">Package name</string>
+    <string name="project_app_name">App name</string>
+    <string name="quick_run_debug">Quick run</string>
     <string name="redo">Redo</string>
     <string name="run">Run</string>
     <string name="save">Save</string>
@@ -239,7 +239,7 @@
     <item name="last" type="string">Last</item>
     <item name="next" type="string">Next</item>
     <item name="replace" type="string">Replace</item>
-    <item name="replaceAll" type="string">Replace All</item>
+    <item name="replaceAll" type="string">Replace all</item>
     <item name="replacement" type="string">Replacement</item>
     <item name="text_to_search" type="string">Text to search</item>
     <item name="more" type="string" translatable="false" >More</item>
