--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="msg_about_license_source">Source and License: %s</string>
-    <string name="msg_about_licensed_under">Licensed under %s</string>
-    <string name="msg_about_no_licenses">Failed to load licenses</string>
+    <string name="license_jdk">AndroidIDE uses a modified build of the JDK which is licensed under the GNU General Public License v2.0. The source code and the license of the JDK can be found in the JDK itself or at : </string>
+    <string name="title_developers">Developers</string>
+    <string name="msg_developers">\u2022 Akash Yadav\n\u2022 Marvin Stelter</string>
+    <string name="title_open_source_licenses">Open source licenses</string>
+    <string name="msg_open_source_licenses">AndroidIDE uses open source libraries. You can find the source and the license of the libraries used by clicking on below links.</string>
+    <string name="msg_about_licensed_under">Licensed under: </string>
     <string name="about_option_email">Email</string>
     <string name="about_option_website">Website</string>
     <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
