--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="menu_navigate_definition">Go to definition</string>
+    <string name="menu_navigate_references">Find all references</string>
+    <string name="menu_navigate">Code</string>
+    <string name="menu_code_action">Code Action</string>
+    <string name="menu_comment_line">Comment line</string>
+    <string name="menu_uncomment_line">Uncomment line</string>
+    <string name="menu_find">Find</string>
+    <string name="menu_find_file">Find in file</string>
+    <string name="menu_find_project">Find in project</string>
+    <string name="msg_search_modules">Search in modules</string>
+    <string name="msg_finding_references">Finding references&#8230;</string>
+    <string name="msg_finding_definition">Finding definition&#8230;</string>
+    <string name="msg_no_modules">No modules found in project</string>
+    <string name="hint_find_project_filter">Filter file extensions (optional)</string>
+    <string name="msg_find_project_filter">Separated by \'|\'</string>
+    <string name="msg_empty_search_query">Please enter text</string>
+    <string name="msg_select_search_modules">Select modules to search</string>
+    <string name="msg_searching_project">Finding in project, please wait&#8230;</string>
     <string name="view_search_results">Search results</string>
     <string name="msg_no_definition">Definition not found</string>
     <string name="msg_no_references">No references found</string>
