--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="menu_project_info">Project info</string>
+    <string name="header_module_info">Module info</string>
+    <string name="msg_module_count">Modules: %d</string>
+    <string name="msg_task_count">Tasks: %d</string>
+    <string name="msg_dependency_count">Dependencies: %d</string>
+    <string name="msg_empty_view">I have nothing to show you...</string>
     <string name="msg_init_project_failed">Failed to initialize project!</string>
     <string name="btn_terminal">Terminal</string>
     <string name="msg_shell_verbose">Verbose output is enabled!</string>
