--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="title_confirm_changes">Confirm changes</string>
     <string name="msg_confirm_changes">These files will be modified:\n%s</string>
-    <string name="msg_no_code_actions">No code actions found</string>
+    <string name="msg_no_code_actions">No quickfix found</string>
+    <string name="msg_cannot_perform_fix">Unable to perform quick fix</string>
+    <string name="msg_performing_fixes">Performing fixes&#8230;</string>
     <string name="msg_analyzing_actions">Analyzing code actions</string>
     <string name="msg_service_not_started">Services has not been started yet</string>
-    <string name="msg_code_actions">Code Actions</string>
+    <string name="msg_code_actions">Quickfixes</string>
     <string name="msg_api_info_since">Since API %d</string>
     <string name="msg_api_info_removed">Removed in API %d</string>
     <string name="msg_api_info_deprecated">Deprecated in API %d</string>
