--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="title_clear_output">Clear output</string>
+    <string name="msg_gradlew_installation_failed">Failed to install Gradle Wrapper: %s</string>
+    <string name="msg_installing_gradlew">Gradle Wrapper is not available!\nInstalling default one. Gradle v7.1.1 will be downloaded if necessary.</string>
     <string name="msg_fix_diagnostic">[QuickFix]</string>
     <string name="title_confirm_changes">Confirm changes</string>
     <string name="msg_confirm_changes">These files will be modified:\n%s</string>
@@ -72,7 +75,8 @@
     <string name="msg_no_references">No references found</string>
     <string name="title_confirm_project_close">Close project</string>
     <string name="msg_confirm_project_close">Are you sure you want to close this project? All started Gradle daemons will be stopped after this project is closed.</string>
-    <string name="license_jdk">AndroidIDE uses a modified build of the JDK which is licensed under the GNU General Public License v2.0. The source code and the license of the JDK can be found in the JDK itself or at : </string>
+    <string name="license_epl">AndroidIDE uses LSP4J in its object code form (i.e. without any modifications) which is licensed under EPL 2.0. If you want us to disclose the source code to you, contact us at: </string>
+    <string name="license_jdk">AndroidIDE uses a modified build of the JDK which is licensed under the GNU General Public License v2.0. The source code and the license of the JDK is available at : </string>
     <string name="title_developers">Developers</string>
     <string name="msg_developers">\u2022 Akash Yadav\n\u2022 Marvin Stelter</string>
     <string name="title_open_source_licenses">Open source licenses</string>
