Added actions for selected view in attribute editor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,5 +325,7 @@
     <string name="msg_no_view_parent">This view does not have a parent</string>
     <string name="msg_yesno_def_title">Please confirm</string>
     <string name="msg_yesno_def_message">Are you sure?</string>
+    <string name="msg_view_deletion_failed">Unable to delete the view.</string>
+    <string name="msg_empty_ui_layout">No views have been added. Click to add.</string>
 
 </resources>
